--- a/app/src/main/res/drawable/ic_picture_in_picture.xml
+++ b/app/src/main/res/drawable/ic_picture_in_picture.xml
@@ -1,14 +1,10 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
     android:height="24dp"
+    android:tint="#FFFFFF"
     android:viewportWidth="24"
-    android:viewportHeight="24"
-    android:tint="?attr/colorControlNormal">
-  <path
-      android:pathData="m14,13.5h6c1.108,0 2,0.892 2,2v3c0,1.108 -0.892,2 -2,2h-6c-1.108,0 -2,-0.892 -2,-2v-3c0,-1.108 0.892,-2 2,-2zM3,13.5v2c0,1.05 0.95,2 2,2h3m13,-8v-3c0,-1.16 -0.84,-2 -2,-2h-7m-10,-1 l6,6m0,-5v5h-5"
-      android:strokeLineJoin="round"
-      android:strokeWidth="2"
-      android:fillColor="#00000000"
-      android:strokeColor="@android:color/white"
-      android:strokeLineCap="round"/>
+    android:viewportHeight="24">
+    <path
+        android:fillColor="@android:color/white"
+        android:pathData="M19,11h-8v6h8v-6zM23,19L23,4.98C23,3.88 22.1,3 21,3L3,3c-1.1,0 -2,0.88 -2,1.98L1,19c0,1.1 0.9,2 2,2h18c1.1,0 2,-0.9 2,-2zM21,19.02L3,19.02L3,4.97h18v14.05z" />
 </vector>
