--- a/app/src/main/res/layout/exo_main_controls.xml
+++ b/app/src/main/res/layout/exo_main_controls.xml
@@ -105,6 +105,31 @@
                 android:src="@drawable/ic_closed_caption"
                 app:tint="@android:color/white" />
 
+            <ImageButton
+                android:id="@+id/btn_pip"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:layout_marginStart="8dp"
+                android:background="@drawable/transparent_circle_background"
+                android:contentDescription="@string/player_controls_pip"
+                android:padding="16dp"
+                android:src="@drawable/ic_picture_in_picture"
+                android:visibility="gone"
+                app:tint="@android:color/white" />
+
+            <ImageButton
+                android:id="@+id/btn_aspect_ratio"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:layout_marginStart="8dp"
+                android:background="@drawable/transparent_circle_background"
+                android:contentDescription="@string/player_controls_aspect_ratio"
+                android:padding="16dp"
+                android:src="@drawable/ic_aspect_ratio"
+                app:tint="@android:color/white" />
+
         </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
